# Izing

./: .gitignore  2d_harmoincs.nb  Ant_p_map.nb  B2.nb  CS_TempJ1.9_L32_hJ0.08_0.09_Nintrf9_Nruns2_Ninit100_Nstates50_OP024.npz  CS_TempJ2.0_L32_hJ0.04_0.06_Nintrf9_Nruns2_Ninit100_Nstates50_OP024.npz  CS_eT11_12_22_-2.6666666668_0.0_0.0_L32_mu1T_5.0733333336_mu2T_10.0_Nintrf9_Nruns2_Ninit100_Nstates50_OP024.npz  CS_eT11_12_22_-2.68010292_-1.34005146_-1.71526587_L32_mu1T_4.4_5.2_mu2T_4.9_Nintrf12_Nruns2_Ninit300_Nstates150_OP010.npz  CS_eT11_12_22_-2.68010292_-1.34005146_-1.71526587_L32_mu1T_4.6_5.2_mu2T_4.9_Nintrf13_Nruns2_Ninit3000_Nstates1500_OP05.npz  CS_eT11_12_22_-2.8_0.0_0.0_L32_mu1T_4.199999999999999_4.699999999999999_mu2T_10.0_Nintrf12_Nruns2_Ninit100_Nstates250_OP015.npz  CS_eT11_12_22_-2.8_0.0_0.0_L32_mu1T_4.6_5.3_mu2T_10.0_Nintrf13_Nruns10_Ninit500_Nstates250_OP05.npz  CS_eT11_12_22_-2.8_0.0_0.0_L32_mu1T_4.8_5.0_mu2T_10.0_Nintrf12_Nruns2_Ninit100_Nstates250_OP015.npz  CS_eT11_12_22_-2.8_0.0_0.0_L32_mu1T_5.0_5.1_mu2T_10.0_Nintrf12_Nruns2_Ninit100_Nstates250_OP015.npz  CS_eT11_12_22_-2.8_0.0_0.0_L32_mu1T_5.199999999999999_5.319999999999999_mu2T_10.0_Nintrf12_Nruns2_Ninit100_Nstates250_OP015.npz  CS_eT11_12_22_-2.8_0.0_0.0_L32_mu1T_5.3_5.319999999999999_mu2T_10.0_Nintrf12_Nruns2_Ninit100_Nstates50_OP015.npz  CS_eT11_12_22_2.6666666668_0.0_0.0_L32_mu1T_-3.5858814142760775_-3.5766394518681497_mu2T_0.0_Nintrf9_Nruns2_Ninit100_Nstates50_OP024.npz  CS_eT11_12_22_2.6666666668_0.0_0.0_L32_mu1T_-3.6580990815213106_-3.6486709911050186_mu2T_0.0_Nintrf9_Nruns2_Ninit100_Nstates50_OP024.npz  CS_eT11_12_22_2.6666666668_0.0_0.0_L32_mu1T_-4.480186153032054_-4.466852819698055_mu2T_0.0_Nintrf9_Nruns3_Ninit100_Nstates50_OP024.npz  CS_eT11_12_22_2.6666666668_0.0_0.0_L32_mu1T_-4.533519486368054_-4.466852819698055_mu2T_0.0_Nintrf9_Nruns2_Ninit100_Nstates50_OP024.npz  CS_eT11_12_22_2.6666666668_0.0_0.0_L32_mu1T_-5.173333333592_-5.160000000258_mu2T_-10000000000.0_Nintrf9_Nruns2_Ninit100_Nstates50_OP024.npz  CS_eT11_12_22_2.6666666668_0.0_0.0_L32_mu1T_-5.226666666928_-5.160000000258_mu2T_-10000000000.0_Nintrf9_Nruns2_Ninit100_Nstates50_OP024.npz  D_tests.py  FFS_MC2_10_5_L32_ID1_phi0.1.slurm  FFS_MC3_500_250_L128_ID40_phi0.015.slurm  FPE_D.nb  F_small_n_todelete.nb  L16_Ntau7_Nh310_0.npz  L16_Ntau7_Nh310_2.npz  L16_h0.000000_Nstep100_Tmin0.356675_Tmax0.916291_NT2_Nruns2_2D.npz  L16_h0.000000_Nstep100_Tmin0.510826_Tmax1.203973_NT3_Nruns2_2D.npz  L16_h0.000000_Nstep10_Tmin0.287682_Tmax1.386294_NT15_Nruns5_2D.npz  L16_h0.000000_Nstep10_Tmin0.510826_Tmax1.203973_NT3_Nruns2_2D.npz  L16_h0.000000_Nstep10_Tmin0.510826_Tmax1.203973_NT3_Nruns5_2D.npz  L16_h0.000000_Nstep10_Tmin0.597837_Tmax1.386294_NT13_Nruns5_2D.npz  L16_h0.000000_Nstep10_Tmin0.597837_Tmax1.386294_NT23_Nruns5_2D.npz  L16_h0.000000_Nstep10_Tmin0.916291_Tmax1.609438_NT3_Nruns5_2D.npz  L16_h0.000000_Nstep25601_Tmin0.287682_Tmax0.820981_NT2_Nruns2_2D.npz  L16_h0.000000_Nstep25601_Tmin0.597837_Tmax1.386294_NT13_Nruns3_2D.npz  L16_h0.000000_Nstep3000_Tmin0.597837_Tmax1.386294_NT13_Nruns5_2D.npz  L16_h0.000000_Nstep3000_Tmin0.597837_Tmax1.386294_NT13_Nruns5_2D.npz.save  (+83 more)
Init_state_gen/: CMakeLists.txt  Izing.cpp  Izing.h  Izing_py.cpp  main.cpp
Izing_npzs/: L16_Ntau2_Nh29.npz  (+16 more)
lattice_gas/: CMakeLists.txt  lattice_gas.cpp  lattice_gas.h  lattice_gas_py.cpp  main.cpp
lattice_gas/build_old/: CMakeCache.txt  Makefile  cmake_install.cmake  lattice_gas
(+57 files in other folders)
